--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -13,12 +13,18 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+    - name: Install dependencies
+      run: pip install pytest
     - name: tests
       id: tests
       uses: classroom-resources/autograding-python-grader@v1
       with:
         timeout: 10
-        setup-command: ''
+        setup-command: 'pip install pytest'
     - name: Autograding Reporter
       uses: classroom-resources/autograding-grading-reporter@v1
       env:
