--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         test-name: tests
         setup-command: pip install pytest
-        command: pytest -q
+        command: python -m pytest -q
         timeout: 10
         max-score: 100
     - name: Autograding Reporter
